# rust-otel-tracing-demo

./: Cargo.toml  Makefile  README.md
src/: main.rs  util.rs
