[package]
name = "otel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
opentelemetry = {version = "0.16.0", features = ["serialize","metrics"] }
opentelemetry-jaeger = {version = "0.15.0", features = ["collector_client"]}
time = { version = "0.3.5" , features = ["local-offset", "formatting"]}
#tracing = {version ="0.1.29", features = ["log", "log-always"]}
tracing = {version ="0.1.29"}
tracing-log = "0.1.2"
tracing-opentelemetry = "0.16.0"
tracing-subscriber = { version = "0.3.3", features = ["registry", "env-filter", "fmt", "local-time"] }

